--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="home" id="home">
         <div class="navbar">
         <div class="logo">
-            <img src="/Component 2.png" class="logo">
+            <img src="/Component 2.png" class="logo" alt="LOGO">
         </div>
         <div class="nav-list">
             <ul class="nav-items">
